# adder-codec-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.devcontainer/: setup.sh  (+1 more)
adder-codec-core/: Cargo.toml  README.md
adder-codec-core/src/: lib.rs
adder-codec-core/src/codec/: decoder.rs  encoder.rs  header.rs  mod.rs  rate_controller.rs
adder-codec-core/src/codec/compressed/: mod.rs  stream.rs
adder-codec-core/src/codec/compressed/adu/: cube.rs  frame.rs  interblock.rs  intrablock.rs  mod.rs
adder-codec-core/src/codec/compressed/blocks/: block.rs  inter_coding.rs  mod.rs  prediction.rs
adder-codec-core/src/codec/compressed/fenwick/: context_switching.rs  mod.rs  simple.rs
adder-codec-core/src/codec/compressed/source_model/: cabac_contexts.rs  mod.rs
adder-codec-core/src/codec/empty/: mod.rs  stream.rs
adder-codec-core/src/codec/raw/: mod.rs  stream.rs
adder-codec-core/src/codec_old/: mod.rs
adder-codec-core/src/codec_old/compressed/: blocks.rs  compression.rs  mod.rs
adder-codec-core/src/codec_old/units/: avu.rs  mod.rs
adder-codec-core/src/codec_old/utils/: mod.rs
adder-codec-core/tests/: integration_tests.rs
adder-codec-core/tests/samples/: virat_small_gray.adder
adder-codec-rs/: Cargo.toml  README.md
adder-codec-rs/benches/: block.rs  block_2.rs  framed_to_adder_hd.rs
adder-codec-rs/ci/: README.md  script.sh
adder-codec-rs/evaluation/feature_detection/: log_analyzer.ipynb  multi_log_analyzer.ipynb  multi_logger.ipynb  re_encode_virat.ipynb
adder-codec-rs/evaluation/mmsys23/davis_to_adder/: TEST_davis_framed_contrast_thresholds_fixed.sh  TEST_davis_raw_contrast_thresholds_40.sh  TEST_davis_raw_contrast_thresholds_fixed.sh  TEST_get_dvs_psnr_ssim.sh  evaluate_davis_raw_to_adder.sh  evaluate_davis_to_framed.sh  evaluate_dvs_to_adder.sh  evaluate_dvs_to_dvsframed.sh  generate_example_matrix_m40.sh
adder-codec-rs/evaluation/mmsys23/framed_to_adder/: TEST_contrast_thresholds.sh  TEST_optimize_ticks_per_frame.sh  evaluate_framed_to_adder.sh  generate_example_matrix.sh
adder-codec-rs/evaluation/prophesee/: README.md  get_filesize_reductions.ipynb  pr_curves.ipynb  random_shrink_dat_batch.ipynb  read_median_filesize_reduction.ipynb  run_adder_to_dat_batch.ipynb  run_transcode_batch.ipynb  segmentation_dat_generation.ipynb
adder-codec-rs/examples/: events_to_instantaneous_frames.rs  framed_video_to_adder.rs
adder-codec-rs/src/: header.rs  lib.rs
adder-codec-rs/src/bin_cv/: adder_video_player.rs  aedat4_dvs_visualize.rs  davis_to_adder.rs
adder-codec-rs/src/codec/: mod.rs
adder-codec-rs/src/codec/compressed/: blocks.rs  compression.rs  compression_2.rs  mod.rs  mod2.rs  mod3.rs  mod4.rs
adder-codec-rs/src/codec/raw/: stream.rs
adder-codec-rs/src/codec/units/: avu.rs
adder-codec-rs/src/framer/: driver.rs  event_framer.rs  mod.rs  scale_intensity.rs
adder-codec-rs/src/raw/: raw_stream.rs  stream.rs
adder-codec-rs/src/transcoder/: d_controller.rs  event_pixel_tree.rs  mod.rs
adder-codec-rs/src/transcoder/source/: davis.rs  davis_source.rs  framed.rs  framed_source.rs  mod.rs  prophesee.rs  video.rs
adder-codec-rs/src/utils/: cv.rs  logging.rs  mod.rs  simulproc.rs  stream_migration.rs  viz.rs
adder-codec-rs/tests/: integration_tests.rs
adder-codec-rs/tests/samples/: bunny4.json  bunny_v2_dt.adder  bunny_v2_t.adder  lake_scaled_out  nyc_source_v2.adder  nyc_source_v2_2.adder  nyc_source_v2_2_1px.adder  nyc_v1.adder  nyc_v1_1px.adder  sample_3.gray  sample_3_ordered.adder
adder-info/: Cargo.toml  README.md
adder-info/ci/: check.sh  script.sh
adder-info/src/: main.rs
adder-info/tests/: test_sample.adder
adder-to-dvs/: Cargo.toml  README.md
adder-to-dvs/src/: main.rs
adder-viz/: Cargo.toml  README.md
adder-viz/ci/: check.sh  script.sh
adder-viz/src/: main.rs
adder-viz/src/player/: adder.rs  mod.rs  ui.rs
adder-viz/src/transcoder/: adder.rs  mod.rs  ui.rs
adder-viz/src/utils/: mod.rs  slider.rs
arithmetic-coding/: Cargo.toml  README.md
arithmetic-coding-adder-dep/: CONTRIBUTING.md  Cargo.toml
arithmetic-coding-adder-dep/arithmetic-coding-core-adder-dep/: Cargo.toml
arithmetic-coding-adder-dep/arithmetic-coding-core-adder-dep/src/: lib.rs  model.rs
arithmetic-coding-adder-dep/arithmetic-coding-core-adder-dep/src/model/: fixed_length.rs  max_length.rs  one_shot.rs
arithmetic-coding-adder-dep/arithmetic-coding-core/src/: bitstore.rs  lib.rs
arithmetic-coding-adder-dep/benches/: sherlock.rs
arithmetic-coding-adder-dep/benches/common/: mod.rs
arithmetic-coding-adder-dep/examples/: README.md  concatenated.rs  fenwick_adaptive.rs  fenwick_context_switching.rs  fixed_length.rs  integer.rs  max_length.rs  sherlock.rs  symbolic.rs
arithmetic-coding-adder-dep/examples/common/: mod.rs
arithmetic-coding-adder-dep/fenwick-model/: Cargo.toml  README.md
arithmetic-coding-adder-dep/fenwick-model/src/: context_switching.rs  lib.rs  simple.rs
arithmetic-coding-adder-dep/fuzz/fuzz_targets/: fuzz_target_1.rs  round_trip.rs
arithmetic-coding-adder-dep/src/: decoder.rs  encoder.rs  lib.rs
arithmetic-coding-adder-dep/tests/: concatenated.rs  fixed_length.rs  max_length.rs  sherlock.rs
arithmetic-coding-adder-dep/tests/common/: mod.rs
arithmetic-coding/arithmetic-coding-core/: Cargo.toml  README.md
arithmetic-coding/arithmetic-coding-core/src/: lib.rs  model.rs
arithmetic-coding/arithmetic-coding-core/src/model/: fixed_length.rs  max_length.rs  one_shot.rs
arithmetic-coding/benches/: sherlock.rs
arithmetic-coding/benches/common/: mod.rs
arithmetic-coding/examples/: concatenated.rs  fenwick_adaptive.rs  fenwick_context_switching.rs  fixed_length.rs  integer.rs  max_length.rs  sherlock.rs  symbolic.rs
arithmetic-coding/examples/common/: mod.rs
arithmetic-coding/fenwick-model/: Cargo.toml  README.md
arithmetic-coding/fuzz/: Cargo.toml
arithmetic-coding/fuzz/fuzz_targets/: round_trip.rs
arithmetic-coding/src/: decoder.rs  encoder.rs
arithmetic-coding/tests/: concatenated.rs  fixed_length.rs  fuzz.rs  max_length.rs  sherlock.rs
arithmetic-coding/tests/common/: mod.rs
(+93 files in other folders)
