[workspace]
resolver = "2"
members = [
    "adder-codec-rs",
    "adder-info",
    "adder-to-dvs",
    "adder-viz",
]

[profile.release]
lto = true
opt-level = 3
panic = "unwind"

[profile.dev.package."adder-codec-rs"]
opt-level = 3
overflow-checks = false
#panic = "abort"

[profile.release-viz]
inherits = "release"
panic = "abort"
overflow-checks = false


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0


[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 3


