[package]
name = "adder-codec-core"
version = "0.1.2"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """Core library for encoding/decoding ADΔER events
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-codec-core"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "multimedia::video", "science"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic-coding = {path = "../../arithmetic-coding"}
bincode = "1.3.3"
bitstream-io = "1.6.0"
itertools = "0.10.5"
fenwick = "2.0.1"
float-cmp = "0.9.0"
numquant = "0.2.0"
enum_dispatch = "0.3.11"
num-traits = "0.2.15"
rand = "0.8.5"
rustdct = "0.7.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0"
thiserror = "1.0.38"
transpose = "0.2.2"