[package]
name = "adder-codec-core"
version = "0.3.3"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """Core library for encoding/decoding ADΔER events
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-codec-core"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "multimedia::video", "science"]
exclude = [
    "tests/samples/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["compression"]
compression = ["dep:arithmetic-coding-adder-dep"]

[dependencies]
arithmetic-coding-adder-dep = { path = "../arithmetic-coding-adder-dep", version = "0.3.2", optional = true }
#arithmetic-coding-adder-dep = { version = "0.3.1", optional = true }
bincode = "1.3.3"
bitstream-io = "1.6.0"
enum_dispatch = "0.3.11"
fenwick = "2.0.1"
float-cmp = "0.9.0"
hashbrown = "0.13.2"
itertools = "0.10.5"
nestify = "0.3.1"
numquant = "0.2.0"
num-traits = "0.2.15"
priority-queue = "1.3.1"
rand = "0.8.5"
rustdct = "0.7.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0"
seq-macro = "0.3.5"
thiserror = "1.0.38"
transpose = "0.2.2"
ndarray = "0.15.6"
