[package]
name = "adder-codec-rs"
version = "0.3.1"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """Encoder/transcoder/decoder for ADΔER (Address, Decimation, Δt Event Representation) streams.
 Currently, only implemented for raw (uncompressed) streams. Includes a transcoder for casting either framed or event video
 into an ADΔER representation in a manner which preserves the temporal resolution of the source.
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "multimedia::video", "science"]
exclude = [
    "tests/samples/*",
]
default-run = "adder_simulproc"

[features]
default = ["transcoder"]
transcoder = ["opencv", "dep:fast-math"]
raw-codec = []
docs-only = ["opencv", "dep:fast-math"]

[dependencies]
adder-codec-core = { path = "../adder-codec-core", version = "0.1.2"}
async-trait = "0.1.66"
bincode = "1.3.3"
bitvec = "1.0.1"
bumpalo = "3.11.0"
clap = { version = "4.0.17", features = ["derive"] }
davis-edi-rs = { git = "https://github.com/ac-freeman/davis-EDI-rs.git" }
duplicate = "0.4.1"
fast-math = { version = "0.1", optional = true }
fenwick = "2.0.1"
float-cmp = "0.9.0"
futures = "0.3.26"
generational-arena = "0.2"
itertools = "0.10.3"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
num = "0.4"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.5.3"
reqwest = "0.11.11"
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0"
smallvec = "1.9.0"
thiserror = "1.0.34"
tokio = { version = "1.20.1", features = ["full"] }
#davis-edi-rs = { path = "../../davis-EDI-rs" }
toml = "0.5.8"
bitstream-io = "1.6.0"

[dependencies.opencv]
version = '0.84.5'
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui']
optional = true

[dev-dependencies]
criterion = "0.3.6"
criterion-perf-events = "0.2.0"
perfcnt = "0.8.0"

[[bench]]
name = "framed_to_adder_hd"
harness = false

[[bench]]
name = "block"
harness = false

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
features = ["docs-only"]
