[package]
name = "adder-codec-rs"
version = "0.4.3"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """Encoder/transcoder/decoder for ADΔER (Address, Decimation, Δt Event Representation) streams.
 Currently, only implemented for raw (uncompressed) streams. Includes a transcoder for casting either framed or event video
 into an ADΔER representation in a manner which preserves the temporal resolution of the source.
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "multimedia::video", "science"]
exclude = [
    "tests/samples/*",
]
default-run = "adder_simulproc"

[features]
default = ["transcoder"]
transcoder = ["dep:fast-math", "adder-codec-core"]
compression = ["dep:fast-math", "adder-codec-core/compression"]
open-cv = ["opencv", "davis-edi-rs"]
raw-codec = []
docs-only = ["opencv", "dep:fast-math", "adder-codec-core"]
feature-logging = ["open-cv"]
feature-logging-nonmaxsuppression = ["feature-logging"]


[dependencies]
packed_simd = "0.3.9"
bytemuck = "1.14.0"
adder-codec-core = { path = "../adder-codec-core", version = "0.3.2", default-features = false, optional = true}
#adder-codec-core = { version = "0.3.0", default-features = false, optional = true}
async-trait = "0.1.66"
bincode = "1.3.3"
bitvec = "1.0.1"
bumpalo = "3.11.0"
chrono = "0.4.31"
clap = { version = "4.0.17", features = ["derive"] }
davis-edi-rs = { version = "0.2.4", optional = true }
duplicate = "0.4.1"
fast-math = { version = "0.1", optional = true }
fenwick = "2.0.1"
float-cmp = "0.9.0"
futures = "0.3.26"
generational-arena = "0.2"
itertools = "0.10.3"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
num = "0.4"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.5.3"
reqwest = "0.11.11"
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0"
serde-pickle = "1.0"
smallvec = "1.9.0"
thiserror = "1.0.34"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.8"
bitstream-io = "1.6.0"
video-rs-adder-dep = { version = "0.4.1", features = ["ndarray"] }
ndarray-image = "0.3.0"
raw-parts = "2.0.0"
indicatif = "0.17.7"
const_for = "0.1.2"

[dependencies.opencv]
version = "0.83.0"
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui', 'clang-runtime']
optional = true

[target.'cfg(any(target_os = "linux"))'.dev-dependencies]
criterion = "0.3.6"
criterion-perf-events = "0.2.0"
perfcnt = "0.8.0"

#[[target.'cfg(any(target_os = "linux"))'.bench]]
#name = "framed_to_adder_hd"
#harness = false
#
#[[target.'cfg(any(target_os = "linux"))'.bench]]
#name = "block"
#harness = false

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
features = ["transcoder"]
