[package]
name = "adder-info"
version = "0.3.3"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """
Like `ffprobe`, but for ADΔER videos.
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-info"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "multimedia::video", "science"]

[dependencies]
adder-codec-core = { version = "0.3.3", path = "../adder-codec-core" }
adder-codec-rs = { version = "0.4.4", path = "../adder-codec-rs", features = [
    "transcoder",
] }
clap = { version = "4.0.17", features = ["derive"] }
ndarray = { version = "0.15.6" }

[dev-dependencies]
predicates = "2.1.4"
