[package]
name = "adder-to-dvs"
version = "0.1.0"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """
This program transcodes an ADΔER file to DVS events in a human-readable text representation.
Performance is fast. The resulting DVS stream is visualized during the transcode and written
out as an mp4 file.
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-to-dvs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "science"]

[dependencies.opencv]
version = '0.66.0'
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui']
optional = false

[dependencies]
adder-codec-rs = { version = "0.2.3", path = "../adder-codec-rs", features = [
    "transcoder",
] }
clap = { version = "4.0.17", features = ["derive"] }
ndarray = {version = "0.15.6", features = ["rayon", "serde"]}
