[package]
name = "adder-to-dvs"
version = "0.2.6"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = """
This program transcodes an ADΔER file to DVS events in a human-readable text representation.
Performance is fast. The resulting DVS stream is visualized during the transcode and written
out as an mp4 file.
 """
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-to-dvs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "decoding", "event", "asynchronous", "video"]
categories = ["multimedia::encoding", "multimedia::video", "science"]

[dependencies]
adder-codec-core = { version = "0.3.2", path = "../adder-codec-core" }
clap = { version = "4.0.17", features = ["derive"] }
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
video-rs = { version = "0.5.0", features = ["ndarray"] }
serde = { version = "1.0.190", features = ["derive"] }
chrono = "0.4.31"
