[package]
name = "adder-viz"
version = "0.3.3"
edition = "2021"
resolver = "2"
authors = ["Andrew C. Freeman"]
description = """
A GUI project to visualize and tune parameters of an ADΔER asynchronous video transcode.
"""
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-viz"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "visualization", "video", "asynchronous", "event"]
categories = ["multimedia::encoding", "multimedia::video", "science"]
default-run = "adder-viz"

[features]
default = ["adder-codec-rs/transcoder"]
feature-logging = ["open-cv", "adder-codec-rs/feature-logging"]
feature-logging-nonmaxsuppression = ["open-cv", "adder-codec-rs/feature-logging-nonmaxsuppression"]
open-cv = ["opencv", "adder-codec-rs/open-cv", "adder-codec-rs/transcoder" ]
compression = ["adder-codec-rs/compression"]

[dependencies]
adder-codec-rs = { version = "0.4.3", path = "../adder-codec-rs", features = [
    "transcoder",
] }
bevy = "0.11"
bevy_egui = "0.21.0"
crossbeam-channel = "0.5.6"
egui_file = "0.11.0"
futures = "0.3.26"
rayon = "1.5.3"
rfd = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.20.1", features = ["full"] }
ndarray = "0.15.6"
video-rs-adder-dep = { version = "0.4.1", features = ["ndarray"] }
ndarray-image = "0.3.0"

[dependencies.opencv]
version = "0.83.0"
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui', 'clang-runtime']
optional = true
