[package]
name = "adder-viz"
version = "0.4.1"
edition = "2021"
resolver = "2"
authors = ["Andrew C. Freeman"]
description = """
A GUI project to visualize and tune parameters of an ADΔER asynchronous video transcode.
"""
homepage = "https://github.com/ac-freeman/adder-codec-rs/wiki"
repository = "https://github.com/ac-freeman/adder-codec-rs/tree/main/adder-viz"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["neuromorphic", "visualization", "video", "asynchronous", "event"]
categories = ["multimedia::encoding", "multimedia::video", "science"]
default-run = "adder-viz"

[features]
default = ["adder-codec-rs/transcoder"]
feature-logging = ["open-cv", "adder-codec-rs/feature-logging"]
feature-logging-nonmaxsuppression = ["open-cv", "adder-codec-rs/feature-logging-nonmaxsuppression"]
open-cv = ["opencv", "adder-codec-rs/open-cv", "adder-codec-rs/transcoder" ]
compression = ["adder-codec-rs/compression"]

[dependencies]
adder-codec-rs = { version = "0.4.8", path = "../adder-codec-rs", features = [
    "transcoder",
] }
crossbeam-channel = "0.5.6"
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_file = "0.16.3"
egui_plot = "0.26.2"
futures = "0.3.26"
rayon = "1.5.3"
rfd = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
ndarray = "0.15.6"
video-rs-adder-dep = { version = "0.4.1", features = ["ndarray"] }
ndarray-image = "0.3.0"
rand = "0.8.5"
anyhow = "1.0.82"
async-recursion = "1.1.1"

[dependencies.opencv]
version = "0.92.3"
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui', 'clang-runtime']
optional = true
