[package]
name = "arithmetic-coding-adder-dep"
description = "fast and flexible arithmetic coding library"
version = "0.3.3"
edition = "2021"
license = "MIT"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]
repository = "https://github.com/danieleades/arithmetic-coding"

[dependencies]
arithmetic-coding-core-adder-dep = { path = "arithmetic-coding-core-adder-dep", version = "0.3.3" }
bitstream-io = "2.5.3"
thiserror = "1.0.30"

[dev-dependencies]
fenwick-model = { path = "./fenwick-model" }
criterion = "0.4.0"
test-case = "2.0.2"

[[bench]]
name = "sherlock"
harness = false