[package]
name = "arithmetic-coding"
description = "fast and flexible arithmetic coding library"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]
repository = "https://github.com/danieleades/arithmetic-coding"

[dependencies]
arithmetic-coding-core = { path = "./arithmetic-coding-core", version = "0.3.0" }
bitstream-io = "1.2.0"
thiserror = "1.0.30"

[dev-dependencies]
fenwick-model = { path = "./fenwick-model" }
criterion = "0.4.0"
test-case = "2.0.2"

[[bench]]
name = "sherlock"
harness = false