[package]
name = "arithmetic-coding-core-adder-dep"
description = "core traits for the 'arithmetic-coding' crate"
version = "0.3.3"
edition = "2021"
license = "MIT"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

