[package]
name = "fenwick-model"
version = "0.1.0"
edition = "2021"
description = "fenwick-tree-based test utils for the 'arithmetic-coding' crate"
license = "MIT"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless", "fenwick-tree"]
categories = ["compression", "encoding", "parsing"]
repository = "https://github.com/danieleades/arithmetic-coding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic-coding-core-adder-dep = { path = "../arithmetic-coding-core-adder-dep" }
fenwick = "2.0.0"
thiserror = "1.0.30"
